k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastermind-sync-api
  labels:
    app: mastermind-sync-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastermind-sync-api
  template:
    metadata:
      labels:
        app: mastermind-sync-api
    spec:
      containers:
        - name: mastermind-sync-api
          image: mastermind-sync-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
