k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastermind-sync-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mastermind-sync-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastermind-sync-api-service
                port:
                  number: 9000
